# sprite-lab

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  PHASE_C_DATA_SOURCE_CANDIDATES.md  PROJECT_BRAIN.md  README.md  out.report.json  out_report.md  pack_drilldown_mapping_v1.json  pack_drilldown_mapping_v1.md  pyproject.toml  spritelab.example.yaml
.github/workflows/: ci.yml
docs/: curation.md  dataset_harvester.md  dataset_maker.md  developer_cli.md  filesystem_security.md  first_smoke_test.md  generated_sprite_canonicalization.md  hosted_training.md  ml_dataset.md  product_conditioned_dataset_v5.md  product_dataset_intake.md  product_evaluation.md  product_harvest.md  product_playground.md  product_training.md  product_vision_providers.md  product_web_application.md  qwen_prefill.md  semantic_labeling_v3_architecture.md  training_baseline_architecture.md  training_export.md  training_speed_notes.md  v1_1_factored_cfg.md  v1_default.md  v2_phase0_diagnostics.md  v2_phase1_conditioning.md  v2_phase2_palette_index_heads.md  v2_status.md  v3_command_reference.md  v3_migration_from_low_level_commands.md  v3_project_configuration.md  v3_quickstart.md  v3_reports.md  v3_run_state.md  v3_status_and_gates.md
docs/label_v3/: architecture_decision_record.md  audit_resolution_report.md  implementation_summary.md  review_and_fixes.md
docs/product/: build_a_dataset.md  evaluate_and_generate.md  getting_started.md  local_and_hosted_compute.md  train_a_model.md  troubleshooting.md  vision_providers.md
examples/: canonicalize_demo_bundle.py  create_demo_bundle.py  dedupe_report_demo.py  encode_png_demo.py  ingest_clean_folder_demo.py  preview_grid_demo.py  quality_report_demo.py  quantize_png_demo.py  role_map_demo.py
experiments/codex_v5_next_milestone_report_v1/: artifact_hashes.json  artifact_index.json  audit_summary.json  command_log.txt  commit_summary.json  final_report.json  final_report.md  git_state_after.txt  git_state_before.txt  remaining_blockers.json  test_summary.json
experiments/label_v4_calibration_wave1/: audit_prefill_manifest.json  audit_prefill_report.md  command_log.txt  gui_contract.md
notes/: v2_phase2_decision.md
scripts/: benchmark_train_step.py  build_v1_gallery.ps1  recover_provenance_496.py  reset_autoonly_imported.py
tests/: _harvest_testdata.py  _labeling_audit.py  _ml_testdata.py  _semantic_dataset.py  conftest.py  hierarchical_labeling_support.py  test_496_rpg_candidate_fusion.py  test_496_rpg_candidate_prompt.py  test_496_rpg_candidates.py  test_496_rpg_specificity.py  test_acceptance_gap_report.py  test_alpha_extraction.py  test_annotation_scheduler.py  test_apply_label_v2.py  test_apply_label_v2_skip_reasons.py  test_assisted_golden.py  test_assisted_golden_gui.py  test_assisted_golden_safe_prefill.py  test_build_multisource_v4.py  test_build_semantic_dataset.py  test_bundle_roundtrip.py  test_bundle_validation.py  test_cli_logging.py  test_compare_generated_runs.py  test_compare_generator_families.py  test_conditioned_audit_retained_alias.py  test_conditioned_publication_commit.py  test_conditioned_v5_identity_bindings_step2.py  test_conditioned_v5_receipt_strictness_step2.py  test_conditioned_v5_step2_safety.py  test_conditioning_modes.py  test_contact_sheet_labels.py  test_curation_browser_helpers.py  test_curation_manifest.py  test_dataset_framing_review.py  test_dataset_ids.py  test_dataset_maker_exporter.py  test_dataset_maker_importer.py  test_dataset_maker_model.py  test_dataset_maker_prefill.py  (+270 more)
(+609 files in other folders)
